# LizuChess

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/core/: Game.cpp  Game.h
src/engine/attackdetector/: AttackDetector.cpp  AttackDetector.h
src/engine/board/: Board.cpp  Board.h
src/engine/chessengine/: ChessEngine.cpp  ChessEngine.h
src/engine/gamestate/: GameState.cpp  GameState.h
src/engine/move/: Move.cpp  Move.h
src/engine/movegenerator/: MoveGenerator.cpp  MoveGenerator.h  MoveGeneratorBishop.cpp  MoveGeneratorKing.cpp  MoveGeneratorKnights.cpp  MoveGeneratorPawns.cpp  MoveGeneratorQueen.cpp  MoveGeneratorRook.cpp  MoveGeneratorSliding.cpp
src/engine/movevalidator/: MoveValidator.cpp  MoveValidator.h
src/engine/pieces/: Piece.cpp  Piece.h
src/engine/position/: Position.cpp  Position.h
src/graphics/: Renderer.cpp  Renderer.h
src/theme/: Theme.h  ThemeManager.cpp  ThemeManager.h
